# rover_locomotion

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: rover_dummy.yaml
launch/: rover_locomotion.launch
src/: rover_locomotion.py
test/: rover_locomotion_test.launch  rover_locomotion_test.py  rover_locomotion_test.yaml
urdf/: materials.xacro  rover_dummy.gazebo  rover_dummy.xacro
